# Under_water-bot

./: README.md
auv_controller/: CMakeLists.txt  package.xml
auv_controller/launch/: auv_controller.launch.py
auv_controller/scripts/: auv_controller.py
auv_description/: CMakeLists.txt  package.xml
auv_description/launch/: auv_controller.py  spawn_auv.launch.py  teleop_auv.launch.py
auv_description/urdf/: auv_model.urdf  auv_model.xacro
