<?xml version="1.0"?>
<package format="2">
  <name>auv_controller</name>
  <version>0.0.1</version>
  <description>The auv_controller package</description>

  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

